--- a/template/default/user/login.html
+++ b/template/default/user/login.html
@@ -10,7 +10,7 @@
 				<hr class="xx">
 				{la cookie_time}:<input type="radio" name="cookietime" value="315360000" checked>{la permanent} <input type="radio" name="cookietime" value="2592000">{la 1monent} <input type="radio" name="cookietime" value="86400">{la 1day} <input type="radio" name="cookietime" value="3600">{la 1hour} <input type="radio"name="cookietime" value="0">{la notime}
 				<hr class="xx">
-				{la secode}: {SECODE}
+				{la secode}: {subtemplate common/seccheck}
 				<hr class="xx">
 				<input type="submit" class="submitbtn" value="{la login}">&nbsp;<input type="reset" value="{la reset}">
 			</form>
