--- a/template/default/user/register.html
+++ b/template/default/user/register.html
@@ -10,7 +10,7 @@
 				<hr class="xx">
 				<i class="rq"></i>{la email}:<input type="email" name="email" required>
 				<hr class="xx">
-				<i class="rq"></i>{la secode}: {SECODE}
+				<i class="rq"></i>{la secode}: {subtemplate common/seccheck}
 				<hr class="xx">
 				<input type="submit" class="submitbtn" value="{la login}">&nbsp;<input type="reset" value="{la reset}">
 			</form>
