--- a/template/default/mobile/common/index.html
+++ b/template/default/mobile/common/index.html
@@ -1,6 +1,6 @@
 {template common/header}
 {foreach $out $arid $area}
-	<div data-role="collapsible">
+	<div data-role="collapsible" data-collapsed="false">
 		<h1>{la area} - {$area['name']}</h1>
 	{foreach $area['area'] $fid $forums}
 		<p><a href="forums.php?mod=display&arid={$arid}&fid={$fid}">{$forums['name']}</a></p>
