--- a/template/default/forums/display.html
+++ b/template/default/forums/display.html
@@ -12,7 +12,7 @@
 				<th style="width:15%">{la by}</th>
 				<th style="width:15%">{la sendtime}</th>
 			</tr>
-			{if !@array_key_exists(1,$posts['p'])}
+			{if !$posts}
 				<tr><td colspan="3" class="center">{la forum_nodata}</td></tr>
 			{else}
 				{foreach $posts['p'] $pid $post}
