--- a/template/default/mobile/common/header.html
+++ b/template/default/mobile/common/header.html
@@ -9,9 +9,12 @@
 		<base href="{$_G['siteurl']}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{css m_common}">
+
 		<link rel="stylesheet" href="files/javascript/jquery_mobile/jquery.mobile-1.4.5.min.css">
 		<script src="files/javascript/jquery_mobile/jquery.min.js"></script>
 		<script src="files/javascript/jquery_mobile/jquery.mobile-1.4.5.min.js"></script>
+		<link rel="stylesheet" href="files/javascript/jquery_mobile/PowerBoard.min.css"> 
+		<link rel="stylesheet" href="files/javascript/jquery_mobile/jquery.mobile.icons.min.css"> 
 		<script>
 		jQuery.mobile.ajaxEnabled=false;
 			jQuery.noConflict(true);
