--- a/template/default/css/common.css
+++ b/template/default/css/common.css
@@ -112,6 +112,7 @@ input[type="text"]:focus,input[type="email"]:focus,input[type="password"]:focus,
 }
 img,svg{
 	vertical-align:top;
+	max-width:100%;
 }
 a:link,a:visited{
 	text-decoration:none;
