--- a/template/default/css/m_common.css
+++ b/template/default/css/m_common.css
@@ -17,6 +17,15 @@
 	width:100%;
 	height:100%;
 }
+.avatar{
+	border:1px solid black;
+	padding:2px;
+	margin:2px;
+	background-color:#FFFFFF;
+	border-radius:3px;
+	width:48px;
+	height:48px;
+}
 .atpicright{
 	vertical-align:top;
 	display:inline-block;
