--- a/template/default/editor/editor.html
+++ b/template/default/editor/editor.html
@@ -11,6 +11,8 @@
 		var e_minimode={$EDITOR['minimode']};
 		var e_useattachment={$EDITOR['useattachment']};
 		var e_original_attach={out $EDITOR['attachmentlist']?"JSON.parse('".$EDITOR['attachmentlist']."')":"null"};
+		var e_attach_canfiletype="{out implode('|',$_G['config']['file']['attachment']['file_type'])}";
+		var e_attach_maxsize={$_G['config']['file']['attachment']['max_size']};
 	</script>
 	<link rel="stylesheet" type="text/css" href="{css editor}">
 	<div id="editor_toolbar">
@@ -51,18 +53,12 @@
 	{if $EDITOR['useattachment']}
 	<fieldset id="attachment_fieldset" style="display:none;">
 		<legend>{la attachment}</legend>
-		<span style="float:left;cursor:pointer;" onclick="$('attachment_fieldset').style.display='none'">[X]</span>
-		<!--<div id="attachmentdiv">
-			
-		</div>-->
-		<table border="1" style="width:100%" id="attachmentlist">
-			<tr>
-				<th style="width:90px;">{la aid}</th>
-				<th>{la e_filename}</th>
-				<th style="width:100px;">{la thedo}</th>
-			</tr>
-			<tr><td colspan="3">{la e_selectattachment}<input type="file" id="newinsert" onchange="attachmentinput()" value=""></td></tr>
-		</table>
+		<span style="float:left;cursor:pointer;" onclick="$('attachment_fieldset').style.display='none'">[X]</span><br>
+		<label for="newinsert">{la e_selectattachment}</label><input type="file" id="newinsert" onchange="attachmentinput()" value="">
+		<br>
+		<div id="attachmentlist">
+		</div>
+		<br>
 		{la e_maxsize}: {out sizecount($_G['config']['file']['attachment']['max_size'])}<br>
 		{la e_canfiletype}: {out implode(',',$_G['config']['file']['attachment']['file_type'])}
 		<input type="hidden" name="MAX_FILE_SIZE" value="{$_G['config']['file']['attachment']['max_size']}">
